--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Tenor+Sans&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@font-face {
+  font-family: "TildaSans";
+  font-style: normal;
+  src: url("/fonts/TildaSans-VF.ttf");
+}
+
+.font-tenor-sans {
+  font-family: "Tenor Sans", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.font-tilda-sans {
+  font-family: "TildaSans", serif;
+}
+
+#headline-main {
+  background-image: url('/images/back-main.svg');
+  background-repeat: no-repeat;
 }
